Copy text changes + inline styles and links to info texts

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -4,30 +4,29 @@ en:
       guide:
         cover_photo:
           title: "Step 3: Add a cover photo"
-          description: "A good cover photo can make the difference between people visiting or leaving. Add your own to convince people to visit!"
+          description: "A good cover photo can make the difference between new visitors joining or leaving your marketplace. Add your own to make people join!"
           info_image_alt: "A screenshot of homepage with big cover photo"
-          add_your_own: "Add your own"
-          advice_p1: "Check out this article on where to find good looking images, that are free to use."
-          advice_p2: "Remember: The photo will be resized to 1920x450 pixel size and taller images will be cut in the middle."
+          add_your_own: "Add cover photo"
+          advice: "Check out <a href=\"http://support.sharetribe.com/knowledgebase/articles/744438\" alt=\"How to get good-looking cover photos, logos, favicon, profiles and listing pictures?\">this article</a> on where to find good looking images, that are free to use. <br/>Remember: the photo will be resized to 1920x450 pixel size and taller images will be cut in the middle."
         filter:
-          title: "Step 4: Add fields & filters"
-          description_p1: "Filters help your users find what they are looking for. For example, if you sell clothes, you probably want to create a filter for sizes."
-          description_p2: "Add a custom filter yourself, specific to your marketplace, by adding a field. Your users will need to fill this in when they post a listing. To turn it into a filter, select Display a filter based on this field on the homepage."
+          title: "Step 4: Add listing fields & filters"
+          description_p1: "Filters help your visitors find what they are looking for. For example, if your marketplace is about clothes, you probably want to create a filter for brands."
+          description_p2: "You can create your own filters by adding listing fields."
           info_image_alt: "A screenshot from fields and filters page"
           add_fields_and_filters: "Add fields & filters"
-          advice: "Filters are very handy, but you can also have too many, making it feel difficult for customers to find something. In addition, keep in mind that every filter is an additional field for your suppliers to fill in."
+          advice: "Filters are very handy, but you can also have too many, making it difficult for customers to find something. Keep in mind that every filter is an additional field for your suppliers to fill in."
         invitation:
           title: "Step 7: inviting users"
           description: "Happy with your marketplace look and functions? Maybe one last preview? If you're ready, let's start inviting users!"
           info_image_alt: "A screenshot from invite users page"
           invite_users: "Invite users"
-          advice: "If you plan to send lots of invitations by email, you should use an emailing tool. Check out this article to find resources about suitable email services."
+          advice: "Invite your friends first and start gathering feedback."
         listing:
           title: "Step 6: Add your first listing"
           description: "Listings are what marketplaces are all about, but your marketplace is looking very empty now. To get an idea of how a listing looks, and what it takes to post one, create one yourself."
           info_image_alt: "A screenshot from Post a new listing page"
           post_your_first_listing: "Post your first listing"
-          advice: "Removing a listing is easy: simply click on the listing and choose \"Close listing\"."
+          advice: "Removing a listing is easy: simply click on the listing and choose <i>Close listing</i>."
         next_step:
           slogan_and_description: "Add slogan & description"
           cover_photo: "Add cover photo"
@@ -37,17 +36,17 @@ en:
           invitation: "Invite users"
         paypal:
           title: "Step 5: Start accepting payments"
-          description_p1: "For you to receive transaction fees, and for your users to receive payments, you need to \"Enable Payments\" by connecting your Paypal account. Once connected, you need to choose a minimum transaction size and a commission fee."
-          description_p2: "You can also choose to \"Disable Payments\", if you do not want to receive any transactions fees at this point."
+          description_p1: "For you to receive transaction fees, and for your users to receive payments, you need to \"Enable Payments\" by connecting your PayPal account. Once connected, you need to choose a commission fee."
+          description_p2: ""
           info_image_alt: "A screenshot from payments page"
-          setup_payments: "Setup payments"
-          advice: "When setting the transaction fee, keep in mind how many transactions you expect, and how high the transactions are on average. At the same time, keep it at an acceptable rate for your suppliers and customers. If you expect a high frequency of small transactions, you could set a low % and a low minimum fee, while a marketplace with less frequent, higher priced transactions, should probably do the opposite."
+          setup_payments: "Set up payments"
+          advice: "To disable payments, read <a href=\"http://support.sharetribe.com/knowledgebase/articles/470085\" alt=\"How to disable payments or add free listings to your marketplace\">this article</<a>"
         slogan_and_description:
           title: "Step 2: Slogan & Description"
           description: "The slogan & description help new visitors understand what your marketplace is about, so it is important that you write your own."
           info_image_alt: "A screenshot of homepage showing slogan and description."
-          add_your_own: "Add your own"
-          advice: "Use the description to be very clear what your visitors can find here. The following format works well for a start: The best place to [rent/sell/swap/share] [products/services/goods]. Simply choose the parts in between [ ] that suit your marketplace."
+          add_your_own: "Add slogan & description"
+          advice: "Use the description to be very clear about what your visitors can find here. The following format works well for a start: The best place to [rent/sell/swap/share] [products/services/goods]. Simply choose the parts in between [ ] that suit your marketplace."
         status_page:
           title: "Welcome to your marketplace, %{name}"
           title_done: "All done!"
