--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -1289,7 +1289,7 @@ da-DK:
       confirmation_link_is_wrong_or_used: "Bekræftigelses linket er allerede brugt eller på anden måde brudt. Prøv at logge ind, ellers kontakt os, hvis problemet fortsætter."
       additional_email_confirmed: "Din indtastede email er nu godkendt."
       could_not_get_email_from_facebook: "Vi kunne ikke få din email fra Facebook og vi kan ikke oprette en konto uden din email."
-      facebook_email_unconfirmed: ~
+      facebook_email_unconfirmed: "E-mail adressen '%{email}' på din Facebook konto er allerede blevet taget, men er ikke bekræftet. Bekræft venligst e-mail adressen før log ind med Facebook."
       create_new_listing: "Opret endnu en annonce"
       create_one_here: "lave en her"
       email_confirmation_sent_to_new_address: "En bekræftelsesmail er nu sendt til den nye adresse."
