--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1289,7 +1289,7 @@ pt-BR:
       confirmation_link_is_wrong_or_used: "O link de confirmação já está sendo usado ou está com problemas. Tente fazer o login ou entre em contado conosco se o problema persiste."
       additional_email_confirmed: "O e-mail que você entrou agora está confirmado."
       could_not_get_email_from_facebook: "Não foi possível obter endereço de e-mail do Facebook e não pode criar uma conta sem e-mail."
-      facebook_email_unconfirmed: ~
+      facebook_email_unconfirmed: "O endereço de email '%{email}' da sua conta no Facebook account já foi aceito mas ainda não foi confirmado. Por favor confirme o endereço de email antes de entrar usando o Facebook."
       create_new_listing: "Criar um outro anúncio"
       create_one_here: "criar uma aqui"
       email_confirmation_sent_to_new_address: "E-mail de confirmação é agora enviado para o novo endereço."
