--- a/config/locales/eu-ES.yml
+++ b/config/locales/eu-ES.yml
@@ -970,6 +970,8 @@ eu-ES:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: ~
       share_type: ~
