--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -970,6 +970,8 @@ hu:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "Az indulás idejének a mai nap és az egy évvel későbbi dátum közé kell esnie."
       share_type: "Kérjük válasszon egyet."
