--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -970,6 +970,8 @@ id:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "Waktu keberangkatan harus antara waktu saat ini dan satu tahun dari sekarang."
       share_type: "Anda harus memilih salah satu."
