--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -970,6 +970,8 @@ vi:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "Thời gian khởi hành phải nằm trong khoảng từ thời gian hiện tại và một năm sau."
       share_type: "Bạn phải lựa chọn một."
