--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -970,6 +970,8 @@ zh-HK:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: 出發日期必須定於現在時間至一年後之間。
       share_type: 您必須選擇一項。
