--- a/config/locales/devise.es-ES.yml
+++ b/config/locales/devise.es-ES.yml
@@ -14,14 +14,14 @@ es-ES:
       unauthenticated: "Necesitas iniciar sesión o registrarte antes de continuar."
       unconfirmed: "Necesitas confirmar tu cuenta antes de continuar."
       locked: "Tu cuenta está bloqueada."
-      invalid: "Contraseña o Email incorrecto."
+      invalid: "Contraseña o Correo electrónico incorrecto."
       invalid_token: "Token de autenticación incorrecto."
       timeout: "Tu sesión ha expirado. Por favor inicia sesión nuevamente para continuar."
       inactive: "Tu cuenta aún no ha sido activada."
     passwords:
       updated_not_active: "Tu contraseña ha sido cambiada exitosamente."
       send_paranoid_instructions: "Si tu email ya existe en nuestra base de datos, recibirás un enlace para recuperar tu contraseña en tu correo"
-      send_instructions: "Recibirás un email con instrucciones para cambiar tu contraseña en poco minutos."
+      send_instructions: "Recibirás un correo electrónico con instrucciones para cambiar tu contraseña en poco minutos."
       updated: "Tu contraseña ha sido cambiada con éxito. Ahora estás conectado."
     sessions:
       signed_in: "Te has conectado correctamente."
