--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -1003,6 +1003,8 @@ es-ES:
       you_are_receiving_this_because: "Has recibido ésta notificación porque sigues a %{author_name}."
       view_listing: "Ver anuncio"
   error_messages:
+    onboarding:
+      server_rendering: "La guía de inicio no se ha cargado correctamente. Nuestro equipo está trabajando para arreglar el problema lo antes posible."
     listings:
       departure_time: "La hora de salida debe encontrarse entre la fecha actual y un año a partir de ahora."
       share_type: "Debes seleccionar al menos una opción."
@@ -1639,7 +1641,7 @@ es-ES:
       rideshare_offer: "Oferta de traslado compartido"
       rideshare_request: "Solicitud de traslado compartido"
       send_private_message: "Enviar mensaje privado"
-      share_types: "Modos de compartir"
+      share_types: Tipos
       share_types_offer: "Tipo de oferta"
       share_types_request: "Tipo de solicitud"
       tags: Tarjetas
