--- a/config/locales/fr-CA.yml
+++ b/config/locales/fr-CA.yml
@@ -989,6 +989,8 @@ fr-CA:
       you_are_receiving_this_because: "Vous recevez cette notification car vous suivez %{author_name}."
       view_listing: "Voir l'annonce"
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "L'heure de départ doit être comprise entre l'heure actuelle et dans un an."
       share_type: "Vous devez cocher au moins une des cases ci-dessus."
