--- a/config/locales/is.yml
+++ b/config/locales/is.yml
@@ -970,6 +970,8 @@ is:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "Tíminn þarf að vera einhvers staðar á bilinu núna og næsta árið."
       share_type: "Þú verður að velja eitthvað."
