--- a/config/locales/sk-SK.yml
+++ b/config/locales/sk-SK.yml
@@ -970,6 +970,8 @@ sk-SK:
       you_are_receiving_this_because: ~
       view_listing: ~
   error_messages:
+    onboarding:
+      server_rendering: ~
     listings:
       departure_time: "Čas odchodu musí byť medzi aktuálnym časom a jednym rokom odo dneška."
       share_type: "Musíte zvoliť jeden."
