Move onboarding translations to a different file, not translated by community

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -90,3 +90,6 @@ en:
           body: "Fantastic! You did it! Your marketplace is now up and running. However, this is just the start! You should continously update, improve and promote your marketplace. For some ideas on what to do next, check out <a href='https://www.sharetribe.com/academy/' target='_blank'>the Marketplace academy</a>."
           button: "Woohoo, I did it!"
         button_later: "I'll do it later, thanks"
+      topbar:
+        progress_label: "Marketplace progress"
+        next_step: "Next"
