Review comment fixes

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -93,9 +93,9 @@ en:
       topbar:
         progress_label: "Marketplace progress"
         next_step: "Next"
-        add_slogan: "Add Slogan & Description"
-        add_cover: "Upload cover photo"
-        add_filters: "Add Fields & Filters"
-        add_payments: "Accept payments"
-        add_listing: "Add a listing"
-        invite_users: "Invite users"
+        slogan_and_description: "Add Slogan & Description"
+        cover_photo: "Upload cover photo"
+        filter: "Add Fields & Filters"
+        paypal: "Accept payments"
+        listing: "Add a listing"
+        invitation: "Invite users"
