--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -72,7 +72,7 @@ en:
         filter:
           title: "Looking good!"
           body: "Now let's focus on some functionality. Filters help your users find what they are looking for. Add a custom filter yourself, specific to your marketplace."
-          button: "Add fields & fiters"
+          button: "Add fields & filters"
         paypal:
           title: "Well done! "
           body: "Next, start accepting payments! To receive transaction fees and for your users to receive payments, you need to connect your Paypal account. Once connected, you need to choose a minimum transaction size and a commission fee."
