--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -805,7 +805,7 @@ en:
       if_want_to_view_content: "If you want to view the content in %{service_name} without joining it as a member you need to"
       log_out: "log out"
       join_community_button: "Join %{service_name}"
-    consent_given:
+    give_consent:
       invitation_code_invalid_or_used: "Invitation code was invalid or used"
       email_not_allowed: "Email was not allowed for this community"
       email_not_available: "Email was not available"
