WTI pull [skip ci]

--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -998,7 +998,7 @@ da-DK:
       view_listing: "Vis annonce"
   error_messages:
     onboarding:
-      server_rendering: ~
+      server_rendering: "Kom godt i gang guide kunne ikke indlæses. Vi er blevet informeret om situationen, og vi løser det."
     listings:
       departure_time: "Afgang tid skal være mellem aktuelle klokkeslæt og et år fra nu."
       share_type: "Du skal vælge mindst en."
