--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -799,6 +799,11 @@ ru:
       if_want_to_view_content: "Если вы хотите просмотреть контент в %{service_name} без присоединения к нему необходимо"
       log_out: выйти
       join_community_button: "Присоединиться к %{service_name}"
+    give_consent:
+      invitation_code_invalid_or_used: ~
+      email_not_allowed: ~
+      email_not_available: ~
+      consent_not_given: ~
   emails:
     accept_reminder:
       remember_to_accept_offer: "Напоминание о необходимости принять или отклонить предложение от %{sender_name}"
