--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -774,6 +774,11 @@ hu:
       if_want_to_view_content: ~
       log_out: Kijelentkezés
       join_community_button: ~
+    give_consent:
+      invitation_code_invalid_or_used: ~
+      email_not_allowed: ~
+      email_not_available: ~
+      consent_not_given: ~
   emails:
     accept_reminder:
       remember_to_accept_offer: "Kérjük ne feledkezzen meg %{sender_name} ajánlatának elfogadásáról vagy elutasításáról"
