Corrected capital letter for consistency

--- a/config/locales/onboarding/en.yml
+++ b/config/locales/onboarding/en.yml
@@ -16,7 +16,7 @@ en:
           add_fields_and_filters: "Add fields & filters"
           advice: "Filters are very handy, but you can also have too many, making it difficult for customers to find something. Keep in mind that every filter is an additional field for your suppliers to fill in."
         invitation:
-          title: "Step 7: inviting users"
+          title: "Step 7: Inviting users"
           description: "Happy with your marketplace look and functions? Maybe one last preview? If you're ready, let's start inviting users!"
           info_image_alt: "A screenshot from invite users page"
           invite_users: "Invite users"
