--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -869,7 +869,7 @@ en:
       welcome_to_kassi: "Welcome to %{service_name}!"
       need_to_confirm: "You need to confirm your email address."
       confirmation_link_text: "Confirm my email"
-      or_paste_link: "Alternatively you can copy the following link to the address bar of your browser:"
+      or_paste_link: "Alternatively you can copy the following link to your browser's address bar:"
       turning_on_confirmations_in_this_community: "We are starting to use email confirmations in this %{service_name} marketplace."
     common:
       hey: "Hello %{name},"
@@ -1925,11 +1925,11 @@ en:
       resend_confirmation_instructions: "Resend confirmation instructions"
       your_current_email_is: "Your email is %{email}."
       change_email: Change
-      confirm_your_email: "Please confirm your email"
+      confirm_your_email: "Please confirm your email address"
       account_confirmation_instructions: "You will soon receive an email with a link to confirm your email address. Don't forget to check your spam folder! After confirming your address, you can join %{service_name}."
       account_confirmation_instructions_title_admin: "Welcome to your marketplace!"
-      your_marketplace_has_now_been_created: "Your marketplace site has now been created. That was easy, wasn't it? There's just one more step before you can access your site: you need to confirm your email address."
-      account_confirmation_instructions_admin: "You will soon receive an email with a link to confirm your email address. Don't forget to check your spam folder! After confirming your address, you can start configuring your marketplace."
+      your_marketplace_has_now_been_created: "Your marketplace has now been created. That was easy, wasn't it? There's just one more step before you can access your site: we need to confirm your email address."
+      account_confirmation_instructions_admin: "You will soon receive an email with a link to confirm your email address. Don't forget to check your spam folder! Once you open the link, you can start setting up your marketplace."
   settings:
     account:
       change: Change
